work in progress

--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -51,9 +51,7 @@
    "source": [
     "# Visit the Mars news site\n",
     "url = \"https://static.bc-edx.com/data/web/mars_news/index.html\"\n",
-    "browser.visit(url)\n",
-    "\n",
-    "\n"
+    "browser.visit(url)"
    ]
   },
   {
